--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "Y:\\Anaconda\\anaconda\\envs\\study\\python.exe"
+    "python.pythonPath": "Z:\\Anaconda\\anaconda\\envs\\study\\python.exe"
 }
